--- a/Empresa.App/FrontEnd/Pages/_ViewImports.cshtml
+++ b/Empresa.App/FrontEnd/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using FrontEnd
-@namespace FrontEnd.Pages
+﻿@using Frontend
+@namespace Frontend.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
