--- a/Empresa.App/FrontEnd/Pages/Saludos/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Saludos/List.cshtml
@@ -3,13 +3,15 @@
 @{
 }
 
-<h1>Listado de Saludos</h1>
+<h1>Listado de Saludos en Varios Idiomas</h1>
 
 <table class="table">
-    @foreach (var saludo in Model.ListaSaludos)
+    @foreach (var saludo in Model.Saludos)
     {
        <tr>
-           <td>@saludo</td>
+           <td>@saludo.EnEspanol</td>
+           <td>@saludo.EnIngles</td>
+           <td>@saludo.EnItaliano</td>
        </tr> 
     }
 </table>
