--- a/Empresa.App/FrontEnd/Pages/Shared/_Layout.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Saludos/List">Lista de saludos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Personas/List">Lista de Personas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Empresas/List">Lista de Empresas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Empleados/List">Lista de Empleados</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Clientes/List">Lista de Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Directivos/List">Lista de Directivos</a>
+                        </li>
                         
                     </ul>
                 </div>
