--- a/Empresa.App/FrontEnd/Pages/Saludos/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Saludos/List.cshtml
@@ -12,6 +12,13 @@
            <td>@saludo.EnEspanol</td>
            <td>@saludo.EnIngles</td>
            <td>@saludo.EnItaliano</td>
+
+           <td>
+               <a class="btn-primary table-btn" asp-page="./Details" asp-route-saludoId="@saludo.Id">
+               <i> class ="fas fa-info-circle"</i>
+               Detalle de saludo
+               </a>
+           </td>
        </tr> 
     }
 </table>
