--- a/Empresa.App/FrontEnd/Pages/Saludos/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Saludos/List.cshtml
@@ -14,8 +14,8 @@
            <td>@saludo.EnItaliano</td>
 
            <td>
-               <a class="btn-primary table-btn" asp-page="./Details" asp-route-saludoId="@saludo.Id">
-               <i> class ="fas fa-info-circle"</i>
+               <a class="btn btn-primary table-btn" asp-page="./Details" asp-route-saludoId="@saludo.Id">
+               <i class ="fas fa-info-circle"></i>
                Detalle de saludo
                </a>
            </td>
