--- a/Empresa.App/FrontEnd/Pages/Personas/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Personas/List.cshtml
@@ -1,4 +1,27 @@
 ﻿@page
-@model Frontend.Pages.ListModel
+@model Frontend.Pages.ListModelPersonas
 @{
 }
+
+<h1>Listado de Persona</h1>
+
+<table class="table">
+   @foreach (var persona in Model.Persona)
+    {
+       <tr>
+           <td>@persona.Id</td>
+           <td>@persona.Nombre</td>
+           <td>@persona.Apellidos</td>
+           <td>@persona.Documento</td>
+           <td>@persona.FechaNacimiento</td>
+
+
+           <td>
+               <a class="btn btn-primary table-btn" asp-page="./Details" asp-route-personaId="@persona.Id">
+               <i class ="fas fa-info-circle"></i>
+               Detalle de la persona
+               </a>
+           </td>
+       </tr> 
+    }
+</table>
