--- a/Empresa.App/FrontEnd/Pages/Personas/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Personas/List.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 
-<h1>Listado de Persona</h1>
+<h1>Listado de personas</h1>
 
 <table class="table">
    @foreach (var persona in Model.Persona)
