--- a/Empresa.App/FrontEnd/Pages/Empleados/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Empleados/List.cshtml
@@ -1,4 +1,19 @@
 ﻿@page
-@model Frontend.Pages.ListModel
+@model Frontend.Pages.ListModelEmpleados
 @{
 }
+
+<h1>Listado de Empleados</h1>
+
+<table class="table">
+   @foreach (var empleados in Model.Empleados)
+    {
+       <tr>
+           <td>@empleados.Id</td>
+           <td>@empleados.SueldoBruto</td>
+           <td>@empleados.Cargo</td>
+           <td>@empleados.Empleador</td>
+       </tr> 
+    }
+</table>
+
