--- a/Empresa.App/FrontEnd/Pages/Clientes/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Clientes/List.cshtml
@@ -1,4 +1,18 @@
 ﻿@page
-@model Frontend.Pages.ListModel
+@model Frontend.Pages.ListModelClientes
 @{
 }
+
+<h1>Listado de Clientes</h1>
+
+
+<table class="table">
+   @foreach (var cliente in Model.Clientes)
+    {
+       <tr>
+           <td>@cliente.Id</td>
+           <td>@cliente.Telefono</td>
+           <td>@cliente.EsCliente</td>
+       </tr> 
+    }
+</table>
