--- a/Empresa.App/FrontEnd/Pages/Directivos/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Directivos/List.cshtml
@@ -3,7 +3,21 @@
 @{
 }
 
-<h1>Listado de Directivos</h1>
+<div class="text-center center">
+    <h1>Listado de directivos</h1>
+</div>
+
+<br/>
+<br/>
+<br/>
+
+<table class="table">
+    <tr>
+        <th>ID</th>
+        <th>CATEGORIA</th>
+        <th>ID SUBORDINADO</th>
+        <th>DIRIGE EMPRESA</th>
+    </tr>
 
 
 <table class="table">
