--- a/Empresa.App/FrontEnd/Pages/Personas/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Personas/List.cshtml
@@ -3,8 +3,22 @@
 @{
 }
 
-<h1>Listado de personas</h1>
+<div class="text-center center">
+    <h1>Listado de personas</h1>
+</div>
 
+<br/>
+<br/>
+<br/>
+
+<table class="table">
+    <tr>
+        <th>ID</th>
+        <th>NOMBRE</th>
+        <th>APELLIDOS</th>
+        <th>DOCUMENTO</th>
+        <th>FECHA NACIMIENTO</th>
+    </tr>
 
 <table class="table">
    @foreach (var persona in Model.Persona)
