--- a/Empresa.App/FrontEnd/Pages/Clientes/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Clientes/List.cshtml
@@ -3,8 +3,20 @@
 @{
 }
 
-<h1>Listado de Clientes</h1>
+<div class="text-center center">
+    <h1>Listado de clientes</h1>
+</div>
 
+<br/>
+<br/>
+<br/>
+
+<table class="table">
+    <tr>
+        <th>ID</th>
+        <th>TELEFONO</th>
+        <th>ID EMPRESA</th>
+    </tr>
 
 <table class="table">
    @foreach (var cliente in Model.Clientes)
