--- a/Empresa.App/FrontEnd/Pages/Empleados/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Empleados/List.cshtml
@@ -3,7 +3,21 @@
 @{
 }
 
-<h1>Listado de Empleados</h1>
+<div class="text-center center">
+    <h1>Listado de empleados</h1>
+</div>
+
+<br/>
+<br/>
+<br/>
+
+<table class="table">
+    <tr>
+        <th>ID</th>
+        <th>SUELDO</th>
+        <th>CARGO</th>
+        <th>ID EMPLEADOR</th>
+    </tr>
 
 <table class="table">
    @foreach (var empleados in Model.Empleados)
