--- a/Empresa.App/FrontEnd/Pages/Empresas/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Empresas/List.cshtml
@@ -3,7 +3,20 @@
 @{
 }
 
-<h1>Listado de Empresas</h1>
+<div class="text-center center">
+    <h1>Listado de empresas</h1>
+</div>
+
+<br/>
+<br/>
+<br/>
+
+<table class="table">
+    <tr>
+        <th>ID</th>
+        <th>NOMBRE</th>
+        <th>CIF</th>
+    </tr>
 
 <table class="table">
    @foreach (var empresa in Model.Empresas)
