--- a/Empresa.App/FrontEnd/Pages/Shared/_Layout.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,13 +8,14 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index"> EMPRESA APP </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -40,19 +42,33 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Clientes/List">Lista de Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Directivos/List">Lista de Directivos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Directivos/List">Lista de
+                                Directivos</a>
                         </li>
-                        
                     </ul>
                 </div>
+
             </div>
         </nav>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
+            <h1>Integrantes equipo Ágiles - Grupo 56</h1>
         </main>
     </div>
+
+
+    <h2>Integrantes</h2>
+    <ul>
+        <li>Nelson Jovanny Rodriguez Bohórquez</li>
+        <li>Juan Sebastian Urdaneta Colorado</li>
+        <li>Kevin Camilo Aldana Ferrer</li>
+        <li>Fabian Esteban Jaramillo Diaz</li>
+        <li>Fabio Andres Tovar Zambrano</li>
+    </ul>
+    </table>
 
     <footer class="border-top footer text-muted">
         <div class="container">
@@ -66,4 +82,5 @@
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
