--- a/Empresa.App/FrontEnd/Pages/Personas/Buscar.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Personas/Buscar.cshtml
@@ -6,58 +6,33 @@
 <h1>Información de la persona</h1>
 <br>
 <br>
-<div>
     <div class="row">
-        <dt class="col-md-2">
-            @Html.DisplayNameFor(model => model.Persona_enc.Id)
-        </dt>
-        <dd class="col-md-10">
-            @Html.DisplayFor(model => model.Persona_enc.Id)
-        </dd>
-    </div>
-
-    <div class="row">
-        <dt class="col-md-2">
-            @Html.DisplayNameFor(model => model.Persona_enc.Nombre)
-        </dt>
-        <dd class="col-md-10">
-            @Html.DisplayFor(model => model.Persona_enc.Nombre)
-        </dd>
-    </div>
-
-    <div class="row">
-        <dt class="col-md-2">
-            @Html.DisplayNameFor(model => model.Persona_enc.Apellidos)
-        </dt>
-        <dd class="col-md-10">
-            @Html.DisplayFor(model => model.Persona_enc.Apellidos)
-        </dd>
-    </div>
-
-    <div class="row">
-        <dt class="col-md-2">
-            @Html.DisplayNameFor(model => model.Persona_enc.Documento)
-        </dt>
-        <dd class="col-md-10">
-            @Html.DisplayFor(model => model.Persona_enc.Documento)
-        </dd>
-    </div>
-
-    <div class="row">
-        <dt class="col-md-2">
-            @Html.DisplayNameFor(model => model.Persona_enc.FechaNacimiento)
-        </dt>
-        <dd class="col-md-10">
-            @Html.DisplayFor(model => model.Persona_enc.FechaNacimiento)
-        </dd>
-        <br>
-        <br>        
-    </div>
-    <div class="row">
-        <dt class="col-md-2">
-            <input class="btn btn-success" type="button" onclick="window.location.replace('/Personas/List')" value="Aceptar" />
-        </dt>
+    <div class="col-md-4">
+        <form method="post">
+            <div class="form-group">
+                <label asp-for="Persona_enc.Id" class="control-label"></label>
+                <input asp-for="Persona_enc.Id" class="form-control" readonly></input>
+            </div>
+            <div class="form-group">
+                <label asp-for="Persona_enc.Nombre" class="control-label"></label>
+                <input asp-for="Persona_enc.Nombre" class="form-control" readonly></input>
+            </div>
+            <div class="form-group">
+                <label asp-for="Persona_enc.Apellidos" class="control-label"></label>
+                <input asp-for="Persona_enc.Apellidos" class="form-control" readonly></input>
+            </div>
+            <div class="form-group">
+                <label asp-for="Persona_enc.Documento" class="control-label"></label>
+                <input asp-for="Persona_enc.Documento" class="form-control" readonly></input>
+            </div>
+            <div class="form-group">
+                <label asp-for="Persona_enc.FechaNacimiento" class="control-label"></label>
+                <input asp-for="Persona_enc.FechaNacimiento" class="form-control" readonly></input>
+            </div>
+            <div class="form-group">
+                <input class="btn btn-success" type="button" onclick="window.location.replace('/Personas/List')" value="Aceptar" />
+            </div>
+        </form>
     </div>
 </div>
-<br>
 <br>
