--- a/Empresa.App/FrontEnd/Pages/Personas/Actualizar.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Personas/Actualizar.cshtml
@@ -11,7 +11,7 @@
         <form method="post">
             <div class="form-group">
                 <label asp-for="Persona.Id" class="control-label"></label>
-                <input asp-for="Persona.Id" class="form-control" type="text"value="persona.Id"></input>
+                <input asp-for="Persona.Id" class="form-control" readonly></input>
             </div>
             <div class="form-group">
                 <label asp-for="Persona.Nombre" class="control-label"></label>
