--- a/Empresa.App/FrontEnd/Pages/Personas/Eliminar.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Personas/Eliminar.cshtml
@@ -6,57 +6,33 @@
 <h1>Eliminar persona</h1>
 <br>
 <br>
-<form method="post">
-<div>
     <div class="row">
-        <dt class="col-md-2">        
-            @Html.DisplayNameFor(model => model.Persona.Id)
-        </dt>        
-        <dd class="col-md-10">
-            @Html.DisplayFor(model => model.Persona.Id)
-        </dd>        
-    </div>
-           
-    <div class="row">
-        <dt class="col-md-2">
-            @Html.DisplayNameFor(model => model.Persona.Nombre)
-        </dt>
-        <dd class="col-md-10">
-            @Html.DisplayFor(model => model.Persona.Nombre)
-        </dd>
-    </div>
-
-    <div class="row">
-        <dt class="col-md-2">
-            @Html.DisplayNameFor(model => model.Persona.Apellidos)
-        </dt>
-        <dd class="col-md-10">
-            @Html.DisplayFor(model => model.Persona.Apellidos)
-        </dd>
-    </div>
-
-    <div class="row">
-        <dt class="col-md-2">
-            @Html.DisplayNameFor(model => model.Persona.Documento)
-        </dt>
-        <dd class="col-md-10">
-            @Html.DisplayFor(model => model.Persona.Documento)
-        </dd>
-    </div>
-
-    <div class="row">
-        <dt class="col-md-2">
-            @Html.DisplayNameFor(model => model.Persona.FechaNacimiento)
-        </dt>
-        <dd class="col-md-10">
-            @Html.DisplayFor(model => model.Persona.FechaNacimiento)
-        </dd>
+    <div class="col-md-4">
+        <form method="post">
+            <div class="form-group">
+                <label asp-for="Persona.Id" class="control-label"></label>
+                <input asp-for="Persona.Id" class="form-control" readonly></input>
+            </div>
+            <div class="form-group">
+                <label asp-for="Persona.Nombre" class="control-label"></label>
+                <input asp-for="Persona.Nombre" class="form-control" readonly></input>
+            </div>
+            <div class="form-group">
+                <label asp-for="Persona.Apellidos" class="control-label"></label>
+                <input asp-for="Persona.Apellidos" class="form-control" readonly></input>
+            </div>
+            <div class="form-group">
+                <label asp-for="Persona.Documento" class="control-label"></label>
+                <input asp-for="Persona.Documento" class="form-control" readonly></input>
+            </div>
+            <div class="form-group">
+                <label asp-for="Persona.FechaNacimiento" class="control-label"></label>
+                <input asp-for="Persona.FechaNacimiento" class="form-control" readonly></input>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Eliminar" class="btn btn-danger"/>
+                <input class="btn btn-secondary" type="button" onclick="window.location.replace('/Personas/List')" value="Cancelar" />
+            </div>
+        </form>
     </div>
 </div>
-<br>
-<div class="mb1">  
-  <input type="submit" class="btn btn-danger" value="Eliminar">  
-  <input class="btn btn-secondary" type="button" onclick="window.location.replace('/Personas/List')" value="Cancelar" />
-</div>
-</form>
-<br>
