--- a/Empresa.App/FrontEnd/Pages/Index.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Index.cshtml
@@ -5,6 +5,39 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <br>
+    <br>
+    <h1 class="display-4">Gestión Empresarial</h1>
+    <!--<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>-->
 </div>
+
+<table class="table">
+    <tr>
+        <br>
+        <br>
+        <td><a class="btn btn-info" asp-page="./Personas/List">
+            <i class="fas fa-user fa-6x"><br><h4>Personas</h4></i>
+            </a>
+        </td>
+
+        <td><a class="btn btn-info" asp-page="./Empresas/List">
+            <i class="fas fa-building fa-6x"><br><h4>Empresas</h4></i>
+            </a>
+        </td>   
+
+        <td><a class="btn btn-info" asp-page="./Empleados/List">
+            <i class="fas fa-paste fa-6x"><br><h4>Empleados</h4></i>
+            </a>
+        </td>             
+
+        <td><a class="btn btn-info" asp-page="./Clientes/List">
+            <i class="fas fa-file-invoice-dollar fa-6x"><br><h4>Clientes</h4></i>
+            </a>
+        </td>    
+
+        <td><a class="btn btn-info" asp-page="./Directivos/List">
+            <i class="fas fa-user-tie fa-6x"><br><h4>Directivos</h4></i>
+            </a>
+        </td>     
+    <tr>
+</table>
