--- a/Empresa.App/FrontEnd/Pages/Shared/_Layout.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        <!--<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
@@ -29,22 +29,21 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Saludos/List">Lista de saludos</a>
+                        </li>-->
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Personas/List">Personas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Personas/List">Lista de Personas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Empresas/List">Empresas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Empresas/List">Lista de Empresas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Empleados/List">Empleados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Empleados/List">Lista de Empleados</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Clientes/List">Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Clientes/List">Lista de Clientes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Directivos/List">Lista de
-                                Directivos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Directivos/List">Directivos</a>
                         </li>
                     </ul>
                 </div>
@@ -56,19 +55,19 @@
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
-            <h1>Integrantes equipo Ágiles - Grupo 56</h1>
+            <!--<h1>Integrantes equipo Ágiles - Grupo 56</h1>-->
         </main>
     </div>
 
 
-    <h2>Integrantes</h2>
+    <!--<h2>Integrantes</h2>
     <ul>
         <li>Nelson Jovanny Rodriguez Bohórquez</li>
         <li>Juan Sebastian Urdaneta Colorado</li>
         <li>Kevin Camilo Aldana Ferrer</li>
         <li>Fabian Esteban Jaramillo Diaz</li>
         <li>Fabio Andres Tovar Zambrano</li>
-    </ul>
+    </ul>-->
     </table>
 
     <footer class="border-top footer text-muted">
