--- a/Empresa.App/FrontEnd/Pages/Personas/Actualizar.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Personas/Actualizar.cshtml
@@ -10,6 +10,8 @@
     <div class="col-md-4">
         <form method="post">
             <div class="form-group">
+                <!--<label asp-for="Persona.Persona_id" class="control-label"></label>
+                <input asp-for="Persona.Persona_id" class="form-control" readonly></input>-->
                 <label asp-for="Persona.Id" class="control-label"></label>
                 <input asp-for="Persona.Id" class="form-control" readonly></input>
             </div>
