--- a/Empresa.App/FrontEnd/Pages/Personas/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Personas/List.cshtml
@@ -16,7 +16,7 @@
 <br>
 <br>
 <br>
-<table class="table">
+<table class="table">    
     <tr>
         <!--<th>ID</th>-->
         <th>NOMBRE</th>
@@ -34,8 +34,8 @@
         <tr>
            <!--<td>@persona.Id</td>-->
            <td>@persona.Nombre</td>
-           <td>@persona.Apellidos</td>
-           <td>@persona.Documento</td>
+           <td align="left">@persona.Apellidos</td>
+           <td align="left">@persona.Documento</td>
            <!--<td>@persona.FechaNacimiento</td>-->
            
            <td><a class="btn btn-info" asp-page="./Buscar" asp-route-IdPersona="@persona.Id">
@@ -53,4 +53,8 @@
        </tr> 
     }
 </table>
-</table>
+<br>
+<br>
+<a class="btn btn-primary" asp-page="./Index">
+    <i class="fas fa-home"></i>
+</a>
