--- a/Empresa.App/FrontEnd/Pages/Personas/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Personas/List.cshtml
@@ -32,7 +32,7 @@
    @foreach (var persona in Model.Persona)
     {
         <tr>
-           <td>@persona.Id</td>
+           <!--<td>@persona.Id</td>-->
            <td>@persona.Nombre</td>
            <td align="left">@persona.Apellidos</td>
            <td align="left">@persona.Documento</td>
