--- a/Empresa.App/FrontEnd/Pages/Clientes/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Clientes/List.cshtml
@@ -35,6 +35,19 @@
             <td>@cliente.PerRef.Apellidos</td>
             <td>@cliente.PerRef.Documento</td>
             <td>@cliente.Telefono</td>
+
+            <td><a class="btn btn-info" asp-page="./Buscar" asp-route-IdCliente="@cliente.Id">
+                    <i class="fas fa-info-circle"></i>
+                </a>
+            </td>
+            <td><a class="btn btn-warning" asp-page="./Actualizar" asp-route-IdCliente="@cliente.Id">
+                    <i class="fas fa-edit"></i>
+                </a>
+            </td>
+            <td><a class="btn btn-danger" asp-page="./Eliminar" asp-route-IdCliente="@cliente.Id">
+                    <i class="fas fa-minus-circle"></i>
+                </a>
+            </td>
         </tr> 
         }
     </table>
