--- a/Empresa.App/FrontEnd/Pages/Clientes/Buscar.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Clientes/Buscar.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model BuscarUnCliente.BuscarModel
 @{
-    ViewData["Title"] = "Detalle cliente";
+    ViewData["Title"] = "Detalles cliente";
 }
 <h1>Información del cliente</h1>
 <br>
@@ -10,24 +10,28 @@
     <div class="col-md-4">
         <form method="post">
             <div class="form-group">
-                <label asp-for="Cliente_enc.PerRef.Nombre" class="control-label"></label>
+                <label for="name"><b>Nombres :</b></label>
                 <input asp-for="Cliente_enc.PerRef.Nombre" class="form-control" readonly></input>
             </div>
             <div class="form-group">
-                <label asp-for="Cliente_enc.PerRef.Apellidos" class="control-label"></label>
+                <label for="last_name"><b>Apellidos :</b></label>
                 <input asp-for="Cliente_enc.PerRef.Apellidos" class="form-control" readonly></input>
             </div>
             <div class="form-group">
-                <label asp-for="Cliente_enc.PerRef.Documento" class="control-label"></label>
+                <label for="nit"><b>Documento :</b></label>
                 <input asp-for="Cliente_enc.PerRef.Documento" class="form-control" readonly></input>
             </div>
             <div class="form-group">
-                <label asp-for="Cliente_enc.PerRef.FechaNacimiento" class="control-label"></label>
+                <label for="date"><b>Fecha de nacimiento :</b></label>
                 <input asp-for="Cliente_enc.PerRef.FechaNacimiento" class="form-control" readonly></input>
             </div>
             <div class="form-group">
-                <label asp-for="Cliente_enc.Telefono" class="control-label"></label>
+                <label for="phone"><b>Teléfono :</b></label>
                 <input asp-for="Cliente_enc.Telefono" class="form-control" readonly></input>
+            </div>
+            <div class="form-group">
+                <label for="company"><b>Empresa :</b></label>
+                <input asp-for="Cliente_enc.EmpRef.Nombre" class="form-control" readonly></input>
             </div>
             <br>
             <div class="form-group">
