--- a/Empresa.App/FrontEnd/Pages/Index.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Index.cshtml
@@ -15,10 +15,10 @@
     <tr>
         <br>
         <br>
-        <td><a class="btn btn-info" asp-page="./Personas/List">
+        <!--<td><a class="btn btn-info" asp-page="./Personas/List">
             <i class="fas fa-user fa-6x"><br><h4>Personas</h4></i>
             </a>
-        </td>
+        </td>-->
 
         <td><a class="btn btn-info" asp-page="./Empresas/List">
             <i class="fas fa-building fa-6x"><br><h4>Empresas</h4></i>
@@ -31,7 +31,7 @@
         </td>             
 
         <td><a class="btn btn-info" asp-page="./Clientes/List">
-            <i class="fas fa-file-invoice-dollar fa-6x"><br><h4>Clientes</h4></i>
+            <i class="fas fa-user fa-6x"><br><h4>Clientes</h4></i>
             </a>
         </td>    
 
