--- a/Empresa.App/FrontEnd/Pages/Shared/_Layout.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Shared/_Layout.cshtml
@@ -30,9 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Saludos/List">Lista de saludos</a>
                         </li>-->
-                        <li class="nav-item">
+                        <!--<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Personas/List">Personas</a>
-                        </li>
+                        </li>-->
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Empresas/List">Empresas</a>
                         </li>
