--- a/Empresa.App/FrontEnd/Pages/Empresas/Buscar.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Empresas/Buscar.cshtml
@@ -1,8 +1,28 @@
 ﻿@page
-@model MyApp.Namespace.BuscarModel
+@model BuscarUnaEmpresa.BuscarModel
 @{
+     ViewData["Title"] = "Detalles empresa";
 }
 
-<div class="text-center center">
-    <h1>Información de empresa</h1>
+<h1>Información de la empresa</h1>
+<br>
+<br>
+    <div class="row">
+    <div class="col-md-4">
+        <form method="post">
+            <div class="form-group">
+                <label for="name"><b>Nombres :</b></label>
+                <input asp-for="Empresa_enc.Nombre" class="form-control" readonly></input>
+            </div>
+            <div class="form-group">
+                <label for="last_name"><b>CIF :</b></label>
+                <input asp-for="Empresa_enc.CIF" class="form-control" readonly></input>
+            </div>           
+            <br>
+            <div class="form-group">
+                <input class="btn btn-success" type="button" onclick="window.location.replace('/Empresas/List')" value="Aceptar" />
+            </div>
+        </form>
+    </div>
 </div>
+<br>
