--- a/Empresa.App/FrontEnd/Pages/Empresas/Crear.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Empresas/Crear.cshtml
@@ -1,8 +1,28 @@
 ﻿@page
-@model MyApp.Namespace.CrearModel
+@model Crear.UnaEmpresa.CrearModel
 @{
+     ViewData["Title"] = "Crear empresas";
 }
-
-<div class="text-center center">
-    <h1>Crear empresas</h1>
+<h1>Crear empresa</h1>
+<br>
+<br>
+    <div class="row">
+    <div class="col-md-4">
+        <form method="post">
+            <div class="form-group">
+                <label for="name"><b>Nombre :</b></label>
+                <input asp-for="Empresa.Nombre" class="form-control"></input>
+            </div>
+            <div class="form-group">
+                <label for="last_name"><b>CIF :</b></label>
+                <input asp-for="Empresa.CIF" class="form-control"></input>
+            </div>            
+            <br>
+            <div class="form-group">
+                <input type="submit" value="Crear" class="btn btn-success"/>
+                <input class="btn btn-secondary" type="button" onclick="window.location.replace('/Empresas/List')" value="Cancelar" />
+            </div>
+        </form>
+    </div>
 </div>
+<br>
