--- a/Empresa.App/FrontEnd/Pages/Empresas/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Empresas/List.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
-@model Frontend.Pages.ListModelEmpresas
+@model Frontend.EmpresaList.ListModelEmpresas
 @{
+    ViewData["Title"] = "Empresas";
 }
 
 <div class="text-center center">
@@ -20,7 +21,6 @@
 
 <table class="table">
     <tr>
-        <th>ID</th>
         <th>NOMBRE</th>
         <th>CIF</th>
 
@@ -29,28 +29,25 @@
         <th>ELIMINAR</th>
     </tr>
 
-    <table class="table">
-        @foreach (var empresa in Model.Empresas)
+        @foreach (var empresa in Model.EmpresasList)
         {
             <tr>
-                <td>@empresa.Id</td>
                 <td>@empresa.Nombre</td>
                 <td>@empresa.CIF</td>
 
 
-                <td><a class="btn btn-info" asp-page="./Buscar" asp-route-IdPersona="@empresa.Id">
+                <td><a class="btn btn-info" asp-page="./Buscar" asp-route-IdEmpresa="@empresa.Id">
                         <i class="fas fa-info-circle"></i>
                     </a>
                 </td>
-                <td><a class="btn btn-warning" asp-page="./Actualizar" asp-route-IdPersona="@empresa.Id">
+                <td><a class="btn btn-warning" asp-page="./Actualizar" asp-route-IdEmpresa="@empresa.Id">
                         <i class="fas fa-edit"></i>
                     </a>
                 </td>
-                <td><a class="btn btn-danger" asp-page="./Eliminar" asp-route-IdPersona="@empresa.Id">
+                <td><a class="btn btn-danger" asp-page="./Eliminar" asp-route-IdEmpresa="@empresa.Id">
                         <i class="fas fa-minus-circle"></i>
                     </a>
                 </td>
             </tr>
         }
-    </table>
 </table>
