--- a/Empresa.App/FrontEnd/Pages/Empleados/Detalles.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Empleados/Detalles.cshtml
@@ -10,28 +10,32 @@
     <div class="col-md-4">
         <form method="post">
             <div class="form-group">
-                <label asp-for="empleado.PersonaRef.Nombre" class="control-label"></label>
+                <label for="name"><b>Nombres :</b></label>
                 <input asp-for="empleado.PersonaRef.Nombre" class="form-control" readonly></input>
             </div>
             <div class="form-group">
-                <label asp-for="empleado.PersonaRef.Apellidos" class="control-label"></label>
+                <label for="last_name"><b>Apellidos :</b></label>
                 <input asp-for="empleado.PersonaRef.Apellidos" class="form-control" readonly></input>
             </div>
             <div class="form-group">
-                <label asp-for="empleado.PersonaRef.Documento" class="control-label"></label>
+                <label for="nit"><b>Documento :</b></label>
                 <input asp-for="empleado.PersonaRef.Documento" class="form-control" readonly></input>
             </div>
             <div class="form-group">
-                <label asp-for="empleado.PersonaRef.FechaNacimiento" class="control-label"></label>
+                <label for="date"><b>Fecha de nacimiento :</b></label>
                 <input asp-for="empleado.PersonaRef.FechaNacimiento" class="form-control" readonly></input>
             </div>
             <div class="form-group">
-                <label asp-for="empleado.SueldoBruto" class="control-label"></label>
+                <label for="sueldo"><b>Sueldo Bruto :</b></label>
                 <input asp-for="empleado.SueldoBruto" class="form-control" readonly></input>
             </div>
             <div class="form-group">
-                <label asp-for="empleado.Cargo" class="control-label"></label>
+                <label for="cargo"><b>Cargo :</b></label>
                 <input asp-for="empleado.Cargo" class="form-control" readonly></input>
+            </div>
+            <div class="form-group">
+                <label for="company"><b>Empresa :</b></label>
+                <input asp-for="empleado.EmpresaRef.Nombre" class="form-control" readonly></input>
             </div>
             <br>
             <div class="form-group">
