--- a/Empresa.App/FrontEnd/Pages/Empleados/Crear.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Empleados/Crear.cshtml
@@ -3,7 +3,7 @@
 @{
      ViewData["Title"] = "Crear empleado";
 }
-<h1>Crear cliente</h1>
+<h1>Crear empleado</h1>
 <br>
 <br>
     <div class="row">
