--- a/Empresa.App/FrontEnd/Pages/Empresas/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Empresas/List.cshtml
@@ -51,3 +51,8 @@
             </tr>
         }
 </table>
+<br>
+<br>
+<a class="btn btn-primary" asp-page="./Index">
+    <i class="fas fa-home"></i>
+</a>
