--- a/Empresa.App/FrontEnd/Pages/Directivos/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Directivos/List.cshtml
@@ -30,15 +30,15 @@
         <td>@directivo.EmpleadoRef.Cargo</td>
         <td>@directivo.Categoria</td>
 
-        <td><a class="btn btn-info" asp-page="./Buscar" asp-route-IdCliente="@directivo.Id">
+        <td><a class="btn btn-info" asp-page="./Buscar" asp-route-IdDirectivo="@directivo.Id">
             <i class="fas fa-info-circle"></i>
             </a>
         </td>
-        <td><a class="btn btn-warning" asp-page="./Actualizar" asp-route-IdCliente="@directivo.Id">
+        <td><a class="btn btn-warning" asp-page="./Actualizar" asp-route-IdDirectivo="@directivo.Id">
             <i class="fas fa-edit"></i>
             </a>
         </td>
-        <td><a class="btn btn-danger" asp-page="./Eliminar" asp-route-IdCliente="@directivo.Id">
+        <td><a class="btn btn-danger" asp-page="./Eliminar" asp-route-IdDirectivo="@directivo.Id">
             <i class="fas fa-minus-circle"></i>
             </a>
         </td>
