--- a/Empresa.App/FrontEnd/Pages/Directivos/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Directivos/List.cshtml
@@ -10,8 +10,8 @@
 <br/>
 <br/>
 <br/>
-<a class="btn btn-success" asp-page="./Crear">
-    <i class="fas fa-user-plus"></i>
+<a class="btn btn-success" asp-page="./Crear" data-toggle="tooltip" data-placement="top" title="Crear Directivo">
+    <i class="fas fa-user-tie fa-2x"></i>
 </a>
 <br>
 <br>
