--- a/Empresa.App/FrontEnd/Pages/Empresas/List.cshtml
+++ b/Empresa.App/FrontEnd/Pages/Empresas/List.cshtml
@@ -12,8 +12,8 @@
 <br />
 <br />
 
-<a class="btn btn-success" asp-page="./Crear">    
-    <i class="fas fa-building fa-2x"><br><h6>Crear</h6></i>
+<a class="btn btn-success" asp-page="./Crear" data-toggle="tooltip" data-placement="top" title="Crear Empresa">    
+    <i class="fas fa-building fa-2x"></i>
 </a>
 <br>
 <br>
